# rle-python-gee

./: README.md  example_ee_basemap.py  example_eoo.py  example_map_usage.py  pyproject.toml
examples/: ecosystems_display.ipynb  example_aoo.ipynb  example_eoo.py  example_gee_featurecollection.ipynb  example_geojson.ipynb
src/gee_redlist/: __init__.py  ee_rle.py
src/rle_python_gee/: __init__.py  aoo.py  aoo_grid.py  ecosystems.py  ee_auth.py  ee_rle.py  main.py  map.py  rle.py
tests/: __init__.py  test_aoo.py  test_ecosystems.py  test_ee_auth.py  test_ee_rle.py  test_main.py  test_map.py
tests/test_data/: TEST_aoo_grid_cells_to_parquet.parquet  TEST_aoo_polygons_to_parquet.parquet  TEST_ecosystems_to_geojson_null_island.geojson  TEST_ecosystems_to_parquet_null_island.parquet  null_island.geojson  table.json
