[project]
name = "rle-python-gee"
version = "0.1.13"
description = "Tools for IUCN Red List analysis using Google Earth Engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cartopy>=0.24.0",
    "earthengine-api>=1.6.14",
    "geemap>=0.36.6",
    "geopandas>=1.1.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.9.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.3",
    "rasterio>=1.3.0",
    "requests>=2.32.0",
    "scipy>=1.11.0",
    "typer>=0.20.0",
    "wkls>=1.0.1",
]

[project.optional-dependencies]
viz = ["lonboard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rle_python_gee"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (mocked, fast, no Earth Engine authentication required)",
    "integration: Integration tests (requires Earth Engine authentication, slower)",
]
